--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ dist
 .DS_Store
 Thumbs.db
 software_requirements_specification.txt
+transactions_50nodes_500tx.csv
+transactions_acc1_acc120_1000.csv
